Fixed player covering content

--- a/src/components/FeaturedContent/FeaturedContent.module.css
+++ b/src/components/FeaturedContent/FeaturedContent.module.css
@@ -2,7 +2,7 @@
     border: 2px solid #9342d8;
     border-radius: 10px;
     margin-left: 10px;
-    padding: 10px 10px 7% 10px;
+    padding: 10px 10px 8% 10px;
     text-align: left;
     width: 75%;
 }
